--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 bcrypt==4.0.1
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.4
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
@@ -7,13 +9,17 @@ Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.6
+pytz==2023.3.post1
+requests==2.31.0
 SQLAlchemy==2.0.18
 typing_extensions==4.7.1
+urllib3==2.0.4
 Werkzeug==2.3.6
 WTForms==3.0.1
 zipp==3.16.2
