--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.1
 psycopg2-binary==2.9.6
 pytz==2023.3.post1
 requests==2.31.0
